<?xml version="1.0"?>
<package format="2">
  <name>mpl_planner</name>
  <version>0.0.1</version>
  <description>The mpl_planner package</description>
  <maintainer email="sikang@seas.upenn.edu">sikang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>motion_primitive_library</depend>
  <depend>mpl_external_planner</depend>
  <depend>decomp_ros_msgs</depend>
  <depend>decomp_ros_utils</depend>
  <depend>trajectory_msgs</depend>
  <depend>planning_ros_msgs</depend>
  <depend>planning_ros_utils</depend>

</package>
